2005-09-09 Johannes Schmid <jhs@cvs.gnome.org>

	* plugins/cvs-plugin/cvs-interface.c: Handly empty log 
	messages correctly.a

2005-09-09 Johannes Schmid <jhs@cvs.gnome.org>
	
	* scintilla/Makefile.am: Changed scintilla library to noinst
	* pixmaps/Makefile.am: Install password.png
	* libanjuta/anjuta-launcher.c: Changed password detection
	to be able to access GNOME CVS with ssh.
	
2005-08-31  Naba Kumar  <naba@gnome.org>

	* plugins/glade/plugin.c: Set transient window for the widget
	dialogs.
	
2005-08-21  Jens Seidel  <jseidel@cvs.gnome.org>

	* plugins/gtodo/main.c: Typo fix: s/occured/occurred/.

2005-08-10  Naba Kumar  <naba@gnome.org>

	* plugins/build-basic-autotools/build-basic-autotools.c: Added F3
	as shortcut key for execute.

	* src/about.c: Clean up.
	
	Patch from: Jochen Baier  Jochen.Baier@stud.uni-karlsruhe.de
	* plugins/editor/action-callbacks.c: Fixed edit shortcuts for
	entry boxes.
	
2005-08-09  Jean-Noel Guiheneuf <guiheneuf.jean-noel@wanadoo.fr>

	* plugins/editor/search-replace_backend.c :
	Fixed search in File Patterns.

2005-08-09  Philip Van Hoof  <pvanhoof@gnome.org>

	* plugins/gdb/Makefile.am: Fixed a make -j x bug
	
2005-08-04  Naba Kumar  <naba@gnome.org>

	* scintilla/PlatGTK.cxx, patches/pango-1.8.patch: Better fix
	for pango-1.8 rendering bug.
	
2005-08-03  Naba Kumar  <naba@gnome.org>

	* plugins/glade/plugin.c: Proper names for plugin widgets.
	
	* plugins/subversion/anjuta-subversion.glade,
	plugins/subversion/svn-auth.c: Fixed authentication dialog and
	string allocations. Use passed default values when available.
	Set proper focus and dialog default response. Destroy dialog after use.
	Return error when appropriate.

2005-08-02  Naba Kumar  <naba@gnome.org>

	* scintilla/PlatGTK.cxx, patches/pango-1.8.patch: Better fix
	for pango-1.8 rendering bug.
	
2005-08-02  Philip Van Hoof  <pvanhoof@gnome.org>

	* scintilla/Makefile.am: Fixed a make -j x bug
	
2005-08-02  Johannes Schmid <jhs@gnome.org>
	